tests/idris2/positivity004/expected
1/1: Building Issue1771-1 (Issue1771-1.idr)
Error: Fix is not total, not strictly positive

Issue1771-1:3:1--4:29
 3 | data Fix : (Type -> Type) -> Type where
 4 |   MkFix : f (Fix f) -> Fix f

Error: MkFix is not total, not strictly positive

Issue1771-1:4:3--4:8
 1 | %default total
 2 | 
 3 | data Fix : (Type -> Type) -> Type where
 4 |   MkFix : f (Fix f) -> Fix f
       ^^^^^

Error: yesF is not total, possibly not terminating due to call to Main.MkFix

Issue1771-1:9:1--9:18
 5 | 
 6 | F : Type
 7 | F = Fix Not
 8 | 
 9 | yesF : Not F -> F
     ^^^^^^^^^^^^^^^^^

